Fix device/Load RPC
* Add signatures of old WB-MRGBW-D
* Handle illegal XXXX exceptions in device/Load RPC

--- a/templates/config-wb-mrgbw-d.json
+++ b/templates/config-wb-mrgbw-d.json
@@ -4,7 +4,7 @@
     "group": "g-wb",
     "hw": [
         {
-            "signature": "WB-MRGBW-D"
+            "signature": "WBMRGB"
         }
     ],
     "device": {
