feat: deprecate config-xy-md0x template

--- a/templates/config-xy-md0x-deprecated.json
+++ b/templates/config-xy-md0x-deprecated.json
@@ -1,6 +1,7 @@
 {
     "title": "XY-MD0X (XY-MD03, XY-MD04)",
     "device_type": "XY-MD0X",
+    "deprecated": true,
     "group": "g-climate-sensor",
     "device": {
         "name": "XY-MD0X",
