--- a/templates/config-driventv2.json
+++ b/templates/config-driventv2.json
@@ -139,8 +139,8 @@
                 "type": "range",
                 "min": 0,
                 "max": 2500,
+                "round_to": 10,
                 "units": "min",
-                "scale": 10,
                 "group": "polling_settings",
                 "enabled": true
             },
@@ -158,9 +158,7 @@
                 "name": "autocalibration_error",
                 "address": 70,
                 "reg_type": "discrete",
-                "type": "text",
-                "enum": [ 0, 1 ],
-                "enum_titles": [ "No Error", "Error" ],
+                "type": "switch",
                 "readonly": true,
                 "group": "polling_settings",
                 "enabled": true
@@ -169,9 +167,7 @@
                 "name": "error_overload",
                 "address": 71,
                 "reg_type": "discrete",
-                "type": "text",
-                "enum": [ 0, 1 ],
-                "enum_titles": [ "No Error", "Error" ],
+                "type": "switch",
                 "readonly": true,
                 "group": "polling_settings",
                 "enabled": true
@@ -180,9 +176,7 @@
                 "name": "multiple_overloads",
                 "address": 72,
                 "reg_type": "discrete",
-                "type": "text",
-                "enum": [ 0, 1 ],
-                "enum_titles": [ "No Error", "Error" ],
+                "type": "switch",
                 "readonly": true,
                 "group": "polling_settings",
                 "enabled": true
@@ -191,9 +185,7 @@
                 "name": "frequent_movement",
                 "address": 73,
                 "reg_type": "discrete",
-                "type": "text",
-                "enum": [ 0, 1 ],
-                "enum_titles": [ "No Error", "Error" ],
+                "type": "switch",
                 "readonly": true,
                 "group": "polling_settings",
                 "enabled": true
@@ -323,7 +315,6 @@
                 "reg_type": "coil",
                 "enum": [ 0, 1 ],
                 "enum_titles": [ "Off", "On" ],
-                "on_value": 1,
                 "group": "control_settings",
                 "default": 0,
                 "order": 1,
@@ -356,7 +347,7 @@
                 "id": "close_at_startup",
                 "title": "close_at_startup",
                 "address": 59,
-                 "reg_type": "coil",
+                "reg_type": "coil",
                 "enum": [ 0, 1 ],
                 "enum_titles": [ "close_at_startup_off", "close_at_startup_on" ],
                 "group": "control_settings",
