--- a/templates/config-wb-msw_v4_lora.json
+++ b/templates/config-wb-msw_v4_lora.json
@@ -239,6 +239,26 @@
                 "group": "air_quality"
             },
             {
+                "name": "TH Sensor Heater Cleaning Mode Enabled",
+                "address": 8,
+                "fw": "4.35.0",
+                "reg_type": "coil",
+                "type": "switch",
+                "enabled": false,
+                "group": "air_quality"
+            },
+            {
+                "name": "TH Sensor Heater Cleaning Mode Countdown",
+                "address": 975,
+                "fw": "4.35.0",
+                "reg_type": "input",
+                "type": "value",
+                "units": "s",
+                "format": "u16",
+                "enabled": false,
+                "group": "air_quality"
+            },
+            {
                 "name": "Air Quality (VOC)",
                 "reg_type": "input",
                 "address": 11,
@@ -1386,6 +1406,8 @@
                 "name": "Uptime",
                 "reg_type": "input",
                 "address": 104,
+                "type": "value",
+                "units": "s",
                 "format": "u32",
                 "enabled": false,
                 "group": "hw_info"
@@ -1556,6 +1578,8 @@
                 "name": "Temperature Without Compensation",
                 "reg_type": "input",
                 "address": 284,
+                "type": "value",
+                "units": "deg C",
                 "format": "s16",
                 "scale": 0.01,
                 "error_value": "0x7FFF",
@@ -1566,8 +1590,11 @@
                 "name": "Humidity Without Compensation",
                 "reg_type": "input",
                 "address": 285,
+                "type": "value",
+                "units": "%, RH",
+                "format": "s16",
                 "scale": 0.01,
-                "error_value": "0xFFFF",
+                "error_value": "0x7FFF",
                 "enabled": false,
                 "group": "debug"
             }
@@ -1578,9 +1605,7 @@
                 "group_sound_level_title": "Sound Level",
                 "selfheating_compensation_deg_description": "Compensation value is subtracted from measured temperature",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
-                "Uptime": "Uptime (s)",
                 "CO2": "CO₂",
-                "CO2 Force Calibration": "CO₂ Force Calibration",
                 "CO2 Reference Sensor Value": "CO₂ Reference Sensor Value",
                 "CO2 Autocalibration Period": "CO₂ Autocalibration Period",
                 "CO2 Sensor Installed": "CO₂ Sensor Installed",
@@ -1610,6 +1635,8 @@
                 "automatic": "включена",
                 "CO₂ Measurement Range (ppm)": "Диапазон измерения концентрации CO₂ (ppm)",
                 "TH Sensor Heater Enabled": "Включить подогрев датчика TH",
+                "TH Sensor Heater Cleaning Mode Enabled": "Включить режим очистки датчика TH",
+                "TH Sensor Heater Cleaning Mode Countdown": "Оставшееся время очистки",
                 "Self-Heating Compensation (°C)": "Компенсация самонагрева (°C)",
                 "selfheating_compensation_deg_description": "Значение компенсации вычитается из измеренной температуры",
                 "Low-pass Filter Time Constant (ms)": "Время усреднения шума (мс)",
@@ -1622,7 +1649,6 @@
                 "Temperature": "Температура",
                 "Humidity": "Влажность",
                 "CO2": "Уровень CO₂",
-                "CO2 Force Calibration": "Ручная калибровка датчика CO₂",
                 "Air Quality (VOC)": "Качество воздуха (VOC)",
                 "Air Quality Index": "Индекс качества воздуха (AQI)",
                 "VOC Baseline": "Смещение уровня VOC",
