--- a/templates/config-wb-ms_v2.json
+++ b/templates/config-wb-ms_v2.json
@@ -356,6 +356,30 @@
                 "group": "debug"
             },
             {
+                "name": "Temperature Without Compensation",
+                "reg_type": "input",
+                "address": 284,
+                "type": "value",
+                "units": "deg C",
+                "format": "s16",
+                "scale": 0.01,
+                "error_value": "0x7FFF",
+                "enabled": false,
+                "group": "debug"
+            },
+            {
+                "name": "Humidity Without Compensation",
+                "reg_type": "input",
+                "address": 285,
+                "type": "value",
+                "units": "%, RH",
+                "format": "s16",
+                "scale": 0.01,
+                "error_value": "0x7FFF",
+                "enabled": false,
+                "group": "debug"
+            },
+            {
                 "name": "External Sensor 1",
                 "reg_type": "input",
                 "address": "6",
@@ -465,6 +489,8 @@
                 "Illuminance Mode": "Режим измерения освещенности",
                 "Successful TH Readings": "Успешные запросы к датчику TH",
                 "Erroneous TH Readings": "Ошибочные запросы к датчику TH",
+                "Temperature Without Compensation": "Температура до компенсации",
+                "Humidity Without Compensation": "Влажность до компенсации",
                 "1-Wire": "Датчик 1-Wire",
                 "Input 1": "Вход 1",
                 "Input 2": "Вход 2",
